More home tuneinnow styling fixes. Overflow, invis scroll bar, mobile styling.

--- a/style.css
+++ b/style.css
@@ -1117,7 +1117,9 @@ textarea {
 		height:50%!important;
 	}
 }
-
+#current-bottom::-webkit-scrollbar {
+	display: none;
+  }
 .spinitron{
 	font-family: 'Europa Grotesk SH';
 	color: white;
